# dr_plotter

./: .gitignore  CLAUDE.md  CONTEXT_RESTORE.md  CURRENT_WORK_STATUS.md  DESIGN_PHILOSOPHY.md  README.md  pyproject.toml
docs/: CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  architecture-inventory.md  axes_grid1_reference.md  faceting_migration_guide.md  layout_and_spacing_guide.md  legacy-bridge-audit.md  memory-restoration-guide.md
examples/: 00_basic_functionality.py  00_datadec_grids.py  01_basic_functionality.py  01_basic_line.py  01_high_level_api.py  01_quickstart.py  02_high_level_api.py  02_layering_plots.py  02_visual_encoding.py  03_figure_manager.py  03_figure_manager_basics.py  03_layout_composition.py  04_plot_registry.py  04_specialized_plots.py  04_violin_plot.py  05_all_plot_types.py  05_heatmap.py  05_multi_series_plotting.py  05_scatter_showcase.py  06_bump_plot.py  06_faceted_training_curves.py  06_individual_vs_grouped.py  06_line_showcase.py  06_multi_metric_plotting.py  06b_faceted_training_curves_themed.py  07_bar_showcase.py  07_color_coordination.py  07_faceted_training_curves_refactored.py  07_gmm_level_set.py  07_grouped_plotting.py  08_color_coordination.py  08_histogram_showcase.py  08_individual_styling.py  08_multi_series_plots.py  09_cross_groupby_legends.py  09_ml_experiment_plot.py  09_scatter_showcase.py  09_violin_showcase.py  10_color_coordination.py  10_heatmap_showcase.py  (+49 more)
scripts/: README.md  datadec_unified_example.py  dr_plotter.py  explore_mean_eval_data.py  plot_bump.py  plot_bump_timesteps.py  plot_heatmap.py  plot_means.py  (+4 more)
(+282 files in other folders)
